Fixed the navbar covering the text when there is not a header.

--- a/_static/css/navbar.css
+++ b/_static/css/navbar.css
@@ -30,7 +30,7 @@ article[id]:before {
 
 /* Separates the content from the navigation bar. */
 body {
-    padding-top: 1em;
+    padding-top: 3em;
 }
 
 /**
